# openglforpython

./: alphaBlend.py  camera.py  compute.py  instanced.py  lighting.py  main.py  procedural.py  pyproject.toml  requirements.txt  ssbo.py  texture.py  texture1D.py  texture2D.py  texture2DArray.py  toneMapping.py  transform.py  triangle.py
base/: Renderer.py  __init__.py  item.py
lighting/: Item.py  Renderer.py  __init__.py  fragment.glsl  renderer.py  vertex.glsl
opengl/: Buffer.py  VertexArray.py  __init__.py  program.py  texture.py  vertexArray.py
qml/: Main.qml
