[project]
name = "OpenGL for Python"

[tool.pyside6-project]
files = [
    "alphaBlend.py",
    "base/Renderer.py",
    "base/__init__.py",
    "base/item.py",
    "camera.py",
    "gfx/cat.png",
    "gfx/wood.jpeg",
    "lighting/Item.py",
    "lighting/renderer.py",
    "lighting/__init__.py",
    "lighting/fragment.glsl",
    "lighting/vertex.glsl",
    "main.py",
    "opengl/__init__.py",
    "opengl/Buffer.py",
    "opengl/program.py",
    "opengl/texture.py",
    "opengl/vertexArray.py",
    "qml/Main.qml",
    "texture.py",
    "transform.py",
    "triangle.py",
]
