[project]
name = "OpenGL for Python"

[tool.pyside6-project]
files = [
    "alphaBlend.py",
    "base/Renderer.py",
    "base/__init__.py",
    "base/item.py",
    "camera.py",
    "gfx/cat.png",
    "gfx/wood.jpeg",
    "instanced.py",
    "lighting/Item.py",
    "lighting/__init__.py",
    "lighting/fragment.glsl",
    "lighting/renderer.py",
    "lighting/vertex.glsl",
    "main.py",
    "opengl/Buffer.py",
    "opengl/VertexArray.py",
    "opengl/__init__.py",
    "opengl/program.py",
    "opengl/texture.py",
    "qml/Main.qml",
    "texture.py",
    "transform.py",
    "triangle.py",
]
