[project]
name = "OpenGL for Python"

[tool.pyside6-project]
files = [
    "alphaBlend.py",
    "base/Renderer.py",
    "base/__init__.py",
    "base/item.py",
    "camera.py",
    "gfx/cat.png",
    "gfx/wood.jpeg",
    "instanced.py",
    "lighting.py",
    "main.py",
    "opengl/Buffer.py",
    "opengl/VertexArray.py",
    "opengl/__init__.py",
    "opengl/program.py",
    "opengl/texture.py",
    "qml/Main.qml",
    "texture2D.py",
    "texture2DArray.py",
    "toneMapping.py",
    "transform.py",
    "triangle.py",
]
